--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -24,12 +24,16 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.0.15",
     "@nestjs/schedule": "^5.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.0.15",
     "axios": "^1.8.4",
     "mysql2": "^3.14.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
+    "sqlite3": "^5.1.7",
     "typeorm": "^0.3.22"
   },
   "devDependencies": {
