--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "@repo/types": "workspace:*",
     "@repo/ui": "workspace:*",
+    "@tailwindcss/postcss": "^4.1.3",
     "next": "^15.2.4",
+    "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
