--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,12 +14,17 @@
     "@repo/types": "workspace:*",
     "@repo/ui": "workspace:*",
     "@tailwindcss/postcss": "^4.1.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.487.0",
     "next": "^15.2.4",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "socket.io-client": "^4.8.1",
-    "tailwindcss": "^4.1.3"
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.3",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
