--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Install dependencies
+        run: npm install
+
       - name: Checkout code
         uses: actions/checkout@v3
 
@@ -18,6 +21,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "18.x"
+          cache: "npm"
+
+      - name: Enable npm workspaces
+        run: npm config set workspaces true
 
       - name: Install backend dependencies
         working-directory: apps/backend
