--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           node-version: "18.x"
 
+      - name: Setup latest npm
+        run: npm install -g npm@latest
+
       - name: Install root level dependencies
         run: npm install
 
