--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           node-version: "18.x"
 
+      - name: Install pnpm
+        run: npm install -g pnpm
+
       - name: Install root level dependencies
         run: pnpm install
 
