--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,8 +61,8 @@ jobs:
       #   working-directory: apps/web
       #   run: pnpm test:cov # Run tests and generate coverage
 
-      - name: Save frontend coverage
-        uses: actions/upload-artifact@v4
-        with:
-          name: frontend-coverage
-          path: apps/web/coverage
+      # - name: Save frontend coverage
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: frontend-coverage
+      #     path: apps/web/coverage
