--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,11 +24,13 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
     "next": "^15.2.4",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "recharts": "^2.15.2",
     "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
     "tw-animate-css": "^1.2.5"
