--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,3 +56,13 @@ jobs:
       - name: Lint frontend
         working-directory: apps/web
         run: pnpm lint
+
+      - name: Run frontend tests
+        working-directory: apps/web
+        run: pnpm test:cov
+
+      - name: Save frontend coverage
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-coverage
+          path: apps/web/coverage
