--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint --max-warnings 0",
     "test": "jest",
     "test:watch": "jest --watchAll",
+    "test:cov": "jest --coverage",
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
